update password complet & some bug fixes

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -91,7 +91,7 @@
                                     Numero di post
                                 </div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800 ">
-                                    <a href="/admin/phrase" class="text-dark">
+                                    <a href="/admin/posts" class="text-dark">
                                         <%= number_posts %>
                                     </a>
                                 </div>
