--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -1,1 +1,20 @@
-404
+<%- include('../public/partials/header') %>
+
+    <!-- Begin Page Content -->
+    <div class="container-fluid">
+
+        <!-- 404 Error Text -->
+        <div class="text-center">
+            <div class="error mx-auto" data-text="404">404</div>
+            <p class="lead text-gray-800 mb-5">Page Not Found</p>
+            <p class="text-gray-500 mb-0"><i class="fas fa-bomb"></i> | Hai cercato qualcosa che non esiste ...</p>
+            <% if (user && user.role === ROLE.ADMIN) { %>
+                <a href="/admin/dashboard"><i class="fas fa-long-arrow-alt-left"></i> | Torna alla dashboard</a>
+                <% } else { %>
+                    <a href="/"><i class="fas fa-long-arrow-alt-left"></i> | Torna alla home</a>
+                    <% } %>
+        </div>
+
+    </div>
+
+    <%- include('../public/partials/footer') %>
