--- a/views/admin/posts/all.ejs
+++ b/views/admin/posts/all.ejs
@@ -1,130 +1,141 @@
 <%- include('./../partials/header') %>
 
-    <div class="container-fluid">
+    <% function reduceLength (str, maxChar) {
+    if (str.length > maxChar) {
+        return str.substring(0, maxChar - 3) + ' ...'
+    } else return str
+}  %>
 
-        <div class="row">
+        <div class="container-fluid">
+
+            <div class="row">
 
 
-            <div class="col-12 mb-4">
-                <div class="card border-right-primary shadow h-100 py-2">
-                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold">Tabella POSTS</h6>
+                <div class="col-12 mb-4">
+                    <div class="card border-right-primary shadow h-100 py-2">
+                        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                            <h6 class="m-0 font-weight-bold">Tabella POSTS</h6>
 
-                        <div class="d-flex align-items-center justify-content-between">
-                            <a href="/admin/posts/create" class="text-info mr-4"><i class="fas fa-plus-square"></i> | Crea nuovo</a>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <a href="/admin/posts/create" class="text-info mr-4"><i class="fas fa-plus-square"></i> | Crea nuovo</a>
 
-                            <div class="dropdown no-arrow">
-                                <!-- IE => Import/Export -->
-                                <a class="dropdown-toggle" href="#" role="button" id="dropdownIELink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                </a>
+                                <div class="dropdown no-arrow">
+                                    <!-- IE => Import/Export -->
+                                    <a class="dropdown-toggle" href="#" role="button" id="dropdownIELink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                    </a>
 
-                                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownIE">
-                                    <!-- IMPORT -->
-                                    <div class="dropdown-header">(icon) Importa</div>
-                                    <div class="no-gutters align-items-center">
-                                        <a class="dropdown-item" href="#">
-                                            <div class="text-s font-weight-bold text-dark d-flex align-items-center">
-                                                <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
-                                            </div>
-                                        </a>
-                                    </div>
+                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownIE">
+                                        <!-- IMPORT -->
+                                        <div class="dropdown-header">(icon) Importa</div>
+                                        <div class="no-gutters align-items-center">
+                                            <a class="dropdown-item" href="#">
+                                                <div class="text-s font-weight-bold text-dark d-flex align-items-center">
+                                                    <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
+                                                </div>
+                                            </a>
+                                        </div>
 
-                                    <!-- EXPORT -->
-                                    <div class="dropdown-header">(icon) Esporta</div>
-                                    <div class="no-gutters align-items-center">
-                                        <a class="dropdown-item" href="#">
-                                            <div class="text-s font-weight-bold text-dark d-flex align-items-center">
-                                                <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
-                                            </div>
-                                        </a>
+                                        <!-- EXPORT -->
+                                        <div class="dropdown-header">(icon) Esporta</div>
+                                        <div class="no-gutters align-items-center">
+                                            <a class="dropdown-item" href="#">
+                                                <div class="text-s font-weight-bold text-dark d-flex align-items-center">
+                                                    <i class="fas fa-file-csv fa-2x mr-3"></i>CSV
+                                                </div>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
+
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+                                    <thead>
+                                        <tr>
+                                            <th>Autore</th>
+                                            <th>Titolo</th>
+                                            <th>Testo (max. 128 caratteri)</th>
+                                            <th>Likes</th>
+                                            <th>Data pubblicazione</th>
+                                            <th>Stato</th>
+                                            <th>Azioni</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <!-- LIMITE MASSIMO DI RIGHE VISUALIZZABILI -->
+
+                                        <% posts.forEach(post => { %>
+                                            <tr>
+                                                <td>
+                                                    <a class="text-info">
+                                                        <%= post.username %>
+                                                    </a>
+                                                </td>
+                                                <td>
+                                                    <%= post.title %>
+                                                </td>
+                                                <td>
+                                                    <%= reduceLength(post.text, 120) %>
+                                                        <% if (post.text.length > 117) { %>
+                                                            <br>
+                                                            <a href="/admin/posts/<%= post.id %>" class="text-info">
+                                                        Guarda di più ...
+                                                    </a>
+                                                            <% } %>
+                                                </td>
+                                                <td style="width: 5%;">
+                                                    100 :3
+                                                </td>
+                                                <td>
+                                                    <% if (post.yearOfPublication) { %>
+                                                        <%= post.dayOfPublication %> /
+                                                            <%= post.monthOfPublication %> /
+                                                                <%= post.yearOfPublication %>
+                                                                    <% } else { %>
+                                                                        <%- include('./../partials/table/notAvailable') %>
+                                                                            <% } %>
+                                                </td>
+                                                <td style="width: 3%;">
+                                                    <% if (post.isFinished == 1) { %>
+                                                        <i class="fas fa-globe-europe"></i>
+                                                        <% } else { %>
+                                                            <i class="fas fa-lock"></i>
+                                                            <% } %>
+                                                </td>
+                                                <td class="d-flex justify-content-between align-items-center" style="height: 180px;">
+                                                    <a href="/admin/posts/<%= post.id %>"><i class="fas fa-edit text-info"></i></a>
+                                                    <form method="post" action="/admin/posts/delete/<%= post.id %>?_method=DELETE">
+                                                        <input type="hidden" name="_method" value="DELETE">
+                                                        <button type="submit" style="background-color: transparent; border: none;" id="myEditButton">
+                                                    <i class="fas fa-trash text-primary"></i>
+                                                    </button>
+                                                    </form>
+                                                </td>
+                                            </tr>
+                                            <% }) %>
+
+
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
 
                     </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
-                                <thead>
-                                    <tr>
-                                        <th>Autore</th>
-                                        <th>Titolo</th>
-                                        <th>Testo (max. 128 caratteri)</th>
-                                        <th>Likes</th>
-                                        <th>Data pubblicazione</th>
-                                        <th>Stato</th>
-                                        <th>Azioni</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <!-- LIMITE MASSIMO DI RIGHE VISUALIZZABILI -->
-
-                                    <% posts.forEach(post => { %>
-                                        <tr>
-                                            <td>
-                                                <a class="text-info">
-                                                    <%= post.username %>
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <%= post.title %>
-                                            </td>
-                                            <td>
-                                                <%= post.text %>
-                                                    <!-- serve un limite massimo (apro con modal)-->
-                                            </td>
-                                            <td style="width: 5%;">
-                                                100 :3
-                                            </td>
-                                            <td>
-                                                <% if (post.yearOfPublication) { %>
-                                                    <%= post.dayOfPublication %> /
-                                                        <%= post.monthOfPublication %> /
-                                                            <%= post.yearOfPublication %>
-                                                                <% } else { %>
-                                                                    <%- include('./../partials/table/notAvailable') %>
-                                                                        <% } %>
-                                            </td>
-                                            <td style="width: 3%;">
-                                                <% if (post.isFinished == 1) { %>
-                                                    <i class="fas fa-globe-europe"></i>
-                                                    <% } else { %>
-                                                        <i class="fas fa-lock"></i>
-                                                        <% } %>
-                                            </td>
-                                            <td class="d-flex justify-content-between align-items-center" style="height: 180px;">
-                                                <a href="/admin/posts/<%= post.id %>"><i class="fas fa-edit text-info"></i></a>
-                                                <form method="post" action="/admin/posts/delete/<%= post.id %>?_method=DELETE">
-                                                    <input type="hidden" name="_method" value="DELETE">
-                                                    <button type="submit" style="background-color: transparent; border: none;" id="myEditButton">
-                                                    <i class="fas fa-trash text-primary"></i>
-                                                    </button>
-                                                </form>
-                                            </td>
-                                        </tr>
-                                        <% }) %>
-
-
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-
                 </div>
             </div>
+
+
+
         </div>
 
 
 
-    </div>
 
 
+        <!-- <script src="cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script> -->
+        <!-- <script src="/js/admin/tables.js"></script> -->
 
-
-
-    <!-- <script src="cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script> -->
-    <!-- <script src="/js/admin/tables.js"></script> -->
-
-    <%- include('./../partials/footer') %>
+        <%- include('./../partials/footer') %>
