--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,9 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <h1>Accedi</h1>
-                <!-- <p class="font-italic">Creare un account è vantaggioso in quanto permette di salvarti i post che ti piacciono in una tua personale raccolta!</p> -->
+                <% if (messages.error) { %>
+                    <%= messages.error %>
+                        <% } %>
             </div>
         </div>
 
@@ -34,7 +36,6 @@
                         </div>
                         <input type="password" id="password" name="password" placeholder="Password" class="form-control" required>
                     </div>
-
                 </div>
 
                 <div class="row">
