integrated flash messages

--- a/views/admin/partials/footer.ejs
+++ b/views/admin/partials/footer.ejs
@@ -17,6 +17,8 @@
 <!-- Ending Page Wrapper -->
 </div>
 
+<script src="/js/utilsFlashMessages.js"></script>
+
 <!-- Bootstrap core JavaScript-->
 <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/jquery/jquery.min.js "></script>
 <script src="/startbootstrap-sb-admin-2-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
