--- a/views/admin/landing.ejs
+++ b/views/admin/landing.ejs
@@ -99,11 +99,12 @@
                     <div class="container ">
                         <div class="row justify-content-center text-center ">
                             <div class="col-md-10 col-lg-6 ">
-                                <h1>Welcome back, <span class="text-primary" style="font-weight: 600;"><%= user.name %></span></h1>
-                                <hr>
-                                <p class="lead ">Sei un admin, scegli dove vuoni andare </p>
-                                <a class="btn btn-primary" style="width: 100px;" href="/admin/dashboard">Admin</a>
-                                <a class="btn btn-primary" style="width: 100px;" href="/">Basic</a>
+                                <%- include('../partials/flashMessages') %>
+                                    <h1>Welcome back, <span class="text-primary" style="font-weight: 600;"><%= user.name %></span></h1>
+                                    <hr>
+                                    <p class="lead ">Sei un admin, scegli dove vuoni andare </p>
+                                    <a class="btn btn-primary" style="width: 100px;" href="/admin/dashboard">Admin</a>
+                                    <a class="btn btn-primary" style="width: 100px;" href="/">Basic</a>
 
                             </div>
                         </div>
