--- a/views/public/partials/footer.ejs
+++ b/views/public/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="sticky-footer bg-white" style="height: 30px;">
+<footer class="sticky-footer text-center" style="height: 30px; width: 100%; position: fixed; bottom: 0; z-index: -1">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
             <span>Copyright &copy; <a href="https://github.com/matteo-naccarato/im-with-you">I'm with you</a> 2021</span>
