--- a/views/public/partials/profileDropdown.ejs
+++ b/views/public/partials/profileDropdown.ejs
@@ -7,7 +7,7 @@
     <% if (user.role === ROLE.ADMIN) { %>
         <div class="dropdown-divider "></div>
 
-        <a class="dropdown-item" href="/">
+        <a class="dropdown-item" href="/admin/dashboard">
             <button type="button" class="btn btn-light">
                 <i class="far fa-eye"></i> Schermata admin
             </button>
