--- a/views/register.ejs
+++ b/views/register.ejs
@@ -110,8 +110,8 @@
                         </div>
                     </div>
 
-                    <div class="text-center w-100">
-                        <p class="font-weight-bold">Hai già un account? <a href="/login" class="ml-1 text-info">Login</a></p>
+                    <div class="text-center w-100" style="z-index: 99;">
+                        <p class="font-weight-bold mb-10">Hai già un account? <a href="/login" class="ml-1 text-info">Login</a></p>
                     </div>
 
             </form>
